# frc-video-referee

./: .gitignore  DEVELOPMENT.md  README.md  package.json  pyproject.toml
.github/workflows/: ci.yml
docs/: Blackmagic_API_subset.md  Cheesy_Arena_Mods.md  Workflows.md
frontend/: index.html  package-lock.json  package.json  svelte.config.js  vite.config.ts
frontend/public/assets/: var_panel.webmanifest
frontend/src/: App.svelte  app.css  main.ts
frontend/src/lib/: base_colors.css  events.ts  match_time.ts  model.ts  reasons.ts  server_state.svelte.ts  wsclient.svelte.ts  wsclient.ts
frontend/src/var_panel/: AllianceScoreCard.svelte  AllianceScoreData.svelte  EventCard.svelte  EventData.svelte  EventListEntry.svelte  FieldMap.svelte  MatchListEntry.svelte  ReefGraphic.svelte  ScoreCards.svelte  ScoreData.svelte  StatusHeader.svelte  Timeline.svelte  VerticalList.svelte
src/frc_video_referee/: __init__.py  controller.py  model.py  server.py  utils.py
src/frc_video_referee/cheesy_arena/: client.py  model.py
src/frc_video_referee/db/: __init__.py  model.py
src/frc_video_referee/hyperdeck/: client.py  model.py
src/frc_video_referee/web/: __init__.py  model.py
static/: app.js  index.html  style.css
tools/: mock_hyperdeck.py  test_mock_hyperdeck.py  websocket_trace.py
