[project]
name = "frc-video-referee"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Ian Thompson", email = "ian@yann.io" }]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.116.1",
    "pyperdeck>=0.0.1",
    "websockets>=15.0.1",
    "uvicorn>=0.32.1",
]

[project.scripts]
frc-video-referee = "frc_video_referee:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/frc_video_referee"]
force-include = { "static" = "frc_video_referee/static" }
